[package]
name = "tower-router"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]
publish = false

[dependencies]
futures = "0.1"
tower-service = { version = "0.2", path = "../tower-service" }
futures-borrow = { git = "https://github.com/carllerche/better-future" }

[dev-dependencies]
futures-test = { git = "https://github.com/carllerche/better-future" }
