[package]
name = "tower-steer"
version = "0.1.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["sync", "rt-core", "rt-threaded", "macros"]}
futures-util = "0.3"
