[package]
name = "tower-steer"
version = "0.1.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-steer/0.1.0"
description = """
Functionality to aid managing steering requests between Tower [`Service`]s.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
tower-service = "0.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["sync", "rt-core", "rt-threaded", "macros"]}
futures-util = "0.3"
