[package]
name = "tower-test"
# When releasing to crates.io:
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.4.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-test/0.4.0"
description = """
Utilities for writing client and server `Service` tests.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1.0", features = ["sync"] }
tokio-test = "0.4"
tower-layer = { version = "0.3", path = "../tower-layer" }
tower-service = { version = "0.3", path = "../tower-service" }
pin-project-lite = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
