[package]
name = "tower-timeout"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.1.x" git tag.
version = "0.3.0-alpha.2"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-timeout/0.3.0-alpha.2"
description = """
Apply a timeout to requests, ensuring completion within a fixed time duration.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[dependencies]
tower-service = "=0.3.0-alpha.2"
tower-layer = { version = "=0.3.0-alpha.2", path = "../tower-layer" }
tokio-timer = "=0.3.0-alpha.5"
pin-project = "0.4"
