[package]

name = "tower-util"
# When releasing to crates.io:
# - Remove path dependencies
# - Update html_root_url.
# - Update doc url
#   - Cargo.toml
#   - README.md
# - Update CHANGELOG.md.
# - Create "v0.3.x" git tag.
version = "0.3.0"
authors = ["Tower Maintainers <team@tower-rs.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/tower-rs/tower"
homepage = "https://github.com/tower-rs/tower"
documentation = "https://docs.rs/tower-util/0.3.0-alpha.2"
description = """
Utilities for working with `Service`.
"""
categories = ["asynchronous", "network-programming"]
edition = "2018"

[features]
default = ["call-all"]
call-all = ["futures-util"]

[dependencies]
tower-service = "0.3"
pin-project = "0.4"
futures-core = { version = "0.3", default-features = false }

# Optional

futures-util = { version = "0.3", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio-test = "0.2"
tokio = { version = "0.2", features = ["stream", "sync", "macros"] }
tower-test = { version = "0.3", path = "../tower-test" }
